--- a/test/index.html
+++ b/test/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <title>expect.js tests</title>
-    <link href="/support/mocha.css" rel="stylesheet" media="screen" />
-    <script src="/support/jquery.js"></script>
-    <script src="/support/mocha.js"></script>
-    <script>mocha.setup({ ui: 'bdd', globals: ['script*']});</script>
-    <script src="/expect.js"></script>
-    <script src="/test/expect.js"></script>
+    <meta charset="utf-8">
+    <link href="../node_modules/mocha/mocha.css" rel="stylesheet" media="screen">
+    <script src="../node_modules/mocha/mocha.js"></script>
+    <script>mocha.setup({ ui: 'bdd' });</script>
+    <script src="../index.js"></script>
+    <script src="expect.js"></script>
     <script>window.onload = mocha.run;</script>
   </head>
   <body>
